Fix alignment issues in footer and add logos

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@ section {
 
 .project-grid{
     display: flex;
+    column-gap: 40px;
 }
 
 #primary-heading {
@@ -43,11 +44,29 @@ img{
 }
 
 .footer {
-    height: 100px;
+    height: 120px;
     background-color: hsl(267, 92%, 90%);
-  }
+    align-content:center;
+}
 
-.wrap-column {
+.wrap-row {
     display: flex;
     flex-direction:row;
+    justify-content: space-between;
+    align-items:center;
+}
+
+.primary-button {
+    padding: 8px 8px;
+    color: hsl(0, 0%, 96%);
+    background-color: hsl(271, 76%, 53%);
+    border-radius: 4px;
+    border:none;
+    text-align: center;
+}
+
+.right-column {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
 }
